bugfix: overflow bug in table fixed

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -3,6 +3,10 @@ table {
   table-layout: fixed;
   border-collapse: collapse;
   font-size: 12px;
+
+  input {
+    width: 100%;
+  }
 }
 
 tr,
@@ -10,7 +14,7 @@ th,
 td {
   text-transform: capitalize;
   text-align: left;
-  padding: 8px 0;
+  padding: 8px 4px;
 }
 
 th {
